<resources>
    <string name="app_name">Поля</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail_input">Введите E-mail</string>
    <string name="password_input">Введите пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="u_registration"><u>Зарегистрироваться</u></string>
    <string name="registration">Зарегистрироваться</string>
    <string name="create_login">Придумайте логин</string>
    <string name="u_login"><u>Войти</u></string>
    <string name="registration_title">Регистрация</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="login_input">Введите логин</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="wrong_email">Неверный E-mail</string>
    <string name="server_not_responding">Сервер не отвечает</string>
    <string name="email_registered">E-mail уже зарегистрирован</string>
    <string name="settings">Настройки</string>
    <string name="application_theme">Тема приложения</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="dialog_message">Приложение исользует данные о вашем местоположении, чтобы определять геолокацию вашего телефона. Для корректной работы приложения необходимо выйти из закрытого помещения.</string>
    <string name="ok">Окей</string>
</resources>