<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/log_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintEnd_toEndOf="@id/end_gl"
        app:layout_constraintTop_toTopOf="@id/img_gl"
        app:cardCornerRadius="15dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/polya"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_email"
        style="@style/tv_hint"
        android:text="@string/e_mail"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toTopOf="@id/log_gl" />

    <EditText
        android:id="@+id/log_et_email"
        style="@style/et_base"
        android:layout_marginTop="4dp"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail_input"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/end_gl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/tv_hint"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/log_et_email" />

    <EditText
        android:id="@+id/log_et_password"
        style="@style/et_base"
        android:layout_marginTop="4dp"
        android:autofillHints="password"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/end_gl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_acb_enter"
        style="@style/acb_entrance"
        android:layout_marginTop="40dp"
        android:background="@drawable/rect_round_10dp"
        android:enabled="false"
        android:stateListAnimator="@null"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/end_gl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/log_et_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/log_tv_registration"
        style="@style/tv_hyper"
        android:layout_marginTop="23dp"
        android:text="@string/u_registration"
        app:layout_constraintEnd_toEndOf="@id/end_gl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/log_acb_enter" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_error"
        style="@style/tv_error_window"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rect_round_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorOnPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>